package exceptions;

public class InvalidAge extends Exception{
    public InvalidAge(String message) {
        super(message);
    }

}